@@ -1,3 +1,7 @@
+2012-08-22  Robby Stephenson  <robby@periapsis.org>
+
+	* Corrected actor and role order in Allocine API fetcher.
+
 2012-08-07  Robby Stephenson  <robby@periapsis.org>
 
 	* Fixed a bug with adding new fields when importing bibtex (Bug 304767).
